Pc layout bugs fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,6 +106,51 @@
   color: #fff;
 }
 
+
+
+.circle-container {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  top: -4rem;
+}
+
+/* Circle image */
+.circle-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+/* Icon over circle */
+.icon-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 90px;
+  transform: translate(-50%, -50%);
+}
+
+/* Text at corner */
+.corner-text {
+  position: absolute;
+  top: 30px;
+  right: 10px;   /* change for other corners */
+  background: #00ff88;
+  color: #000000;
+  padding: 4px 9px;
+  border-radius: 12px;
+  font-size: 12px;
+  box-shadow: 0 4px 10px #00ff88 ;
+  font-weight: 600;
+}
+.hero-text{
+  position: relative;
+  top: -40px;
+}
+
+
 .podcast-circle {
   width: 180px;
   height: 180px;
@@ -134,11 +179,12 @@
 
 .hero-buttons {
   display: flex;
-  gap: 16px;
-  justify-content: center;
+ 
 }
 
 .btn-outline {
+  position: relative;
+  right: 70px;
   padding: 10px 22px;
   border-radius: 30px;
   border: 1px solid #7f5cff;
@@ -354,7 +400,8 @@
 /* ===== HOST SECTION ===== */
 .host {
   padding: 80px 20px;
-  background: #020617;
+  background: #1A0B2E;
+  
 }
 .host h3{
   display: flex;
@@ -365,6 +412,7 @@
 }
 .host-wrapper {
   display: flex;
+  margin-left: 100px;
   align-items: center;
   gap: 40px;
 }
@@ -374,15 +422,21 @@
   border-radius: 20px;
 }
 
+.host-content{
+  
+  margin-right: 100px;
+}
 .host-content h3 {
   color: #fff;
-  margin-bottom: 10px;
+ 
+  background-color: #351165;
 }
 
 .host-content h4 {
   color: #ffffff;
   font-size: 2rem;
   margin-bottom: 16px;
+
 }
 
 .host-content p {
